# horus-engine

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml
docs/: architecture.md
src/horus_engine/: __init__.py
src/horus_engine/application/: __init__.py  errors.py  events.py  gateways.py  market_data_journal.py  market_data_session.py  models.py  order_book_state.py
src/horus_engine/domain/: __init__.py  enums.py  errors.py  order_book.py  orders.py  values.py
src/horus_engine/infrastructure/: __init__.py
src/horus_engine/infrastructure/polymarket/: __init__.py  catalog.py  clob_parsing.py  errors.py  market_stream.py  order_book.py  parsing.py  websocket_parsing.py
src/horus_engine/infrastructure/sqlite/: __init__.py  errors.py  market_data_journal.py  schema.py
tests/: test_package.py
tests/fixtures/polymarket/: active_market.json
tests/unit/application/: test_events.py  test_gateways.py  test_market_data_journal_models.py  test_market_data_session.py  test_models.py  test_order_book_state.py
tests/unit/domain/: test_enums.py  test_order_book.py  test_orders.py  test_values.py
tests/unit/infrastructure/polymarket/: test_catalog.py  test_market_stream.py  test_order_book_snapshot.py
tests/unit/infrastructure/sqlite/: test_market_data_journal.py
