[project]
name = "horus-engine"
version = "0.1.0"
description = "Research-oriented prediction-market market-making system."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite>=0.22.1,<0.23",
    "httpx>=0.28.1",
    "websockets>=16.1.1,<17",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["horus_engine"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
files = ["src", "tests"]
strict = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
